# NDS-Pathtracer

./: .gitignore  README.md  devkitpro.ini  main.c  meson.build  ray.c  ray.h  sphere.h  test.c  vector3.c  vector3.h
